--- a/problems/finance/templates/buy.html
+++ b/problems/finance/templates/buy.html
@@ -1,19 +1,21 @@
-{% extends 'layout.html' %}
-
-{% block title %}
-    Buy Stock
-{% endblock %}
-
-{% block main %}
-    <form action='/buy' method='post'>
-        <div class='form-group'>
-            <input class='form-control' name='symbol' autofill='off' placeholder='Stock Symbol'>
-        </div>
-        <button class='btn btn-primary' type='submit'>Buy Stock</button>
-        <div>
-        {% if money and companyName %}
-            <h4>You Bought Stock From {{companyName}}! You Have {{money | usd}} Left!</h4>
-        {% endif %}
-        </div>
-    </form>
+{% extends 'layout.html' %} {% block title %} Buy Stock {% endblock %} {% block
+main %}
+<form action="/buy" method="post">
+  <div class="form-group">
+    <input
+      class="form-control"
+      name="symbol"
+      autofill="off"
+      placeholder="Stock Symbol"
+    />
+  </div>
+  <button class="btn btn-primary" type="submit">Buy Stock</button>
+  <div>
+    {% if money and companyName %}
+    <h4>
+      You Bought Stock From { {companyName }}! You Have {{money | usd}} Left!
+    </h4>
+    {% endif %}
+  </div>
+</form>
 {% endblock %}
