--- a/problems/finance/templates/sell.html
+++ b/problems/finance/templates/sell.html
@@ -8,6 +8,13 @@ main %}
       autofill="off"
       placeholder="Stock Symbol"
     />
+    <br />
+    <input
+      class="form-control"
+      name="shares"
+      autofill="off"
+      placeholder="Shares"
+    />
   </div>
   <button class="btn btn-primary" type="submit">Sell Stock</button>
   <div>
