--- a/problems/finance/templates/apology.html
+++ b/problems/finance/templates/apology.html
@@ -3,7 +3,7 @@ main %}
 <img
   alt="{{ top }}"
   class="border"
-  src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png"
+  src="http://memegen.link/doge/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg"
   title="{{ top }}"
 />
 {% endblock %}
