--- a/problems/finance/templates/buy.html
+++ b/problems/finance/templates/buy.html
@@ -18,9 +18,10 @@ main %}
   </div>
   <button class="btn btn-primary" type="submit">Buy Stock</button>
   <div>
-    {% if money and companyName %}
+    {% if money and companyName and spent %}
     <h4>
-      You Bought Stock From {{companyName}}! You Have {{money | usd}} Left!
+      You Bought Stock From <code>{{companyName}}</code>! You Spent
+      <code>{{spent | usd}}</code>! You Have <code>{{money | usd}}</code> Left!
     </h4>
     {% endif %}
   </div>
