--- a/problems/finance/templates/register.html
+++ b/problems/finance/templates/register.html
@@ -19,6 +19,14 @@ main %}
       type="password"
     />
   </div>
+  <div class="form-group">
+    <input
+      class="form-control"
+      name="confirmation"
+      placeholder="Password"
+      type="password"
+    />
+  </div>
   <button class="btn btn-primary" type="submit">Register</button>
 </form>
 {% endblock %}
