--- a/CS50w/Wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/CS50w/Wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -13,13 +13,13 @@
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
                 <form action="{% url 'search' %}">
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+                    <input class="search form-control" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'new' %}">Create New Page</a>
                 </div>
                 <div>
                     <a href="{% url 'random' %}">Random Page</a>
