--- a/CS50w/Commerce/auctions/static/auctions/styles.css
+++ b/CS50w/Commerce/auctions/static/auctions/styles.css
@@ -2,7 +2,14 @@ body {
     padding: 10px;
 }
 
-.listing {
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.listing-item {
     border: 1px solid grey;
     border-radius: 10px;
     width: 90%;
@@ -13,14 +20,28 @@ body {
     background-color: rgb(224, 224, 224);
 }
 
-.listing > img {
-    width: 300px;
+.listing-item > img {
+    width: 200px;
     float: left;
     margin: 5px;
     border-radius: 10px;
 }
 
-.listing:hover {
+.listing-item:hover {
     color: black;
     background-color: rgb(218, 218, 218);
+}
+
+.listing-item > span {
+  color: darkgrey;
+}
+
+.listing > img {
+  border-radius: 10px;  
+  width: 500px;
+  margin: 10px;
+}
+
+.btn {
+  margin: 5px;
 }
