--- a/CS50w/Commerce/auctions/templates/auctions/listing.html
+++ b/CS50w/Commerce/auctions/templates/auctions/listing.html
@@ -2,25 +2,19 @@
 
 {% block body %}
     {% if listing %}
-        <div class="row">
-            <div class="col-md-12">
-                <h1>{{ listing.title }}</h1>
-                <p>{{ listing.description }}</p>
-                <p>Starting bid: {{ listing.starting_bid }}</p>
-                <p>End date: {{ listing.end_date }}</p>
-                <p>Created at: {{ listing.created_at }}</p>
-                <p>Updated at: {{ listing.updated_at }}</p>
-                <p>Created by: {{ listing.user.name }}</p>
-            </div>
-        </div>
+        <div class="listing">
+            <h2>{{ listing.title }}</h2>
 
-        <div class="row">
-            <div class="col-md-12">
-                {% if user %}
-                    {% if user.id == listing.user_id %}
-                        <a href="/auctions/{{ listing.id }}/edit" class="btn btn-primary">Edit</a>
+            <img src="{{ listing.image_url }}" alt="Listing Image">
+
+            <div class="row">
+                <div class="col-md-12">
+                    {% if user %}
+                        {% if user.id == listing.user_id %}
+                            <a href="/auctions/{{ listing.id }}/edit" class="btn btn-primary">Edit</a>
+                        {% endif %}
                     {% endif %}
-                {% endif %}
+                </div>
             </div>
         </div>
     {% else %}
