--- a/CS50w/Commerce/auctions/templates/auctions/new_listing.html
+++ b/CS50w/Commerce/auctions/templates/auctions/new_listing.html
@@ -8,43 +8,10 @@
     <form action="{% url 'new_listing' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" name="title" required>
-        </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <textarea class="form-control" name="description" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="category">Category</label>
-            <select class="form-control" name="category" required>
-                {% for category in categories %}
-                    <option value="{{ category.id }}">{{ category.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="image">Image</label>
-            <input type="file" class="form-control-file" name="image">
-        </div>
-        <div class="form-group">
-            <label for="starting_bid">Starting Bid</label>
-            <input type="number" class="form-control" name="starting_bid" required>
-        </div>
-        <div class="form-group">
-            <label for="buy_now">Buy Now</label>
-            <input type="number" class="form-control" name="buy_now">
-        </div>
-        <div class="form-group">
-            <label for="end_date">End Date</label>
-            <input type="date" class="form-control" name="end_date" required>
-        </div>
-        <div class="form-group">
-            <label for="end_time">End Time</label>
-            <input type="time" class="form-control" name="end_time" required>
-        </div>
+        {{ form }}
 
+        <br>
+        
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 {% endblock %}
