--- a/CS50w/Commerce/auctions/templates/auctions/watchlist.html
+++ b/CS50w/Commerce/auctions/templates/auctions/watchlist.html
@@ -1,11 +1,11 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2>Listings in your watchlist</h2>
 
-    {% for listing in active_listings %}
+    {% for listing in listings %}
         {% include "auctions/listing_item.html" with listing=listing %}
     {% empty %}
-        <p>No active listings</p>
+        <p>No listings in your watchlist</p>
     {% endfor %}
 {% endblock %}
