--- a/CS50w/Commerce/auctions/static/auctions/styles.css
+++ b/CS50w/Commerce/auctions/static/auctions/styles.css
@@ -3,10 +3,10 @@ body {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .listing-item {
@@ -33,15 +33,15 @@ main {
 }
 
 .listing-item > span {
-  color: darkgrey;
+    color: darkgrey;
 }
 
-.listing > img {
-  border-radius: 10px;  
-  width: 500px;
-  margin: 10px;
+.listing-image {
+    border-radius: 10px;
+    width: 500px;
+    margin: 10px;
 }
 
 .btn {
-  margin: 5px;
+    margin-top: 5px;
 }
