--- a/CS50w/Network/network/templates/network/index.html
+++ b/CS50w/Network/network/templates/network/index.html
@@ -1,5 +1,7 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+    {% for post in posts %}
+      {% include "post.html" with post=post %}
+    {% endfor %}
 {% endblock %}
