--- a/CS50w/Network/network/static/network/styles.css
+++ b/CS50w/Network/network/static/network/styles.css
@@ -21,6 +21,11 @@
     font-size: 0.6em;
 }
 
+.post-likes-container {
+    display: block;
+    font-size: 0.8em;
+}
+
 .post-edit {
     display: block;
     font-size: 0.6em;
@@ -44,4 +49,8 @@
 .post-author:hover {
     color: black;
     text-decoration: none;
+}
+
+.post-like {
+    cursor: pointer;
 }
