--- a/CS50w/Network/network/templates/network/layout.html
+++ b/CS50w/Network/network/templates/network/layout.html
@@ -6,6 +6,9 @@
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
+        <script>
+          window.csrf_token = "{{ csrf_token }}"
+        </script>
         <script src="{% static 'network/scripts.js' %}"></script>
         {% block head %}{% endblock %}
     </head>
