--- a/CS50w/Final Project/final_project/templates/layout.html
+++ b/CS50w/Final Project/final_project/templates/layout.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}Mail{% endblock %}</title>
+        <title>Online Terminal</title>
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
